--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body {
 .poem {
   line-break: auto;
   text-align: left;
-  font-family: "Baskerville libre";
+ font-family: Libre Baskerville;
 }
 
 #map {
