--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,48 @@ body {
   text-align: left;
  font-family: Libre Baskerville;
 }
+.poem ul, .poem ol
+{
+    list-style-type: none;
+}
+.poem li
+{
+
+  font-style:italic;
+  padding-bottom: 0.1em;
+}
+.poem li:first-child::first-letter
+{
+  font-size:26px;
+  font-style:italic;
+  padding-right:3px;
+}
+.poem li:not(:first-child)
+{
+  margin-left: 20px;
+}
+.poem p {
+  margin-bottom: 15px;
+  line-height: 1.45em;
+}
+.poem h1,
+.poem h2 {
+  font-weight: normal;
+  text-align: center;
+}
+.poem h1 {
+  font-size: 34px;
+  margin-bottom: 10px;
+}
+.poem h2 {
+  font-size: 18px;
+  font-style: italic;
+  margin-bottom: 30px;
+}
+.poem p:last-child {
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+}
 
 #map {
   height: 200px;
