--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   text-align: left;
  font-family: Libre Baskerville;
    white-space: pre-wrap;
+  line-height: 125%;
 }
 .poem ul, .poem ol
 {
